2005-03-29  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/DdTargets.py: add family targets to target list functions
	* src/Marriage.py (at_dest_drag_data_received, ev_dest_drag_data_received, 
	ev_source_drag_data_get, at_source_drag_data_get): fixed dnd methods and 
	added use of DdTarget types.
	* src/plugins/ScratchPad.py (generate_family_event_tooltip, 
	generate_family_event_tooltip, redraw_object_list): added support for 
	family events and attributes.

2005-03-27  Alex Roitman  <shura@gramps-project.org>
	* src/MergeData.py: Fixes for places and sources.
	* src/PlaceView.py (build_context_menu): Typo.
	* src/SourceView.py (__init__,build_tree): Allow multiple,
	selections; (merge): Add placeholder method (borrowed from places,
	needs work.
	* src/gramps_main.py (on_views_switch_page): Enable merge button;
	(on_merge_activate): Call merge for sources.

	* src/RelLib.py (NoteBase,PlaceBase): Add new classes.
	* src/ReadGedcom.py: Use get_note for comments.
	* src/ReadXML.py: Use get_note for comments.
	* src/Sources.py: Use get_note for comments.
	* src/WriteGedcom.py: Use get_note for comments.
	* src/WriteXML.py: Use get_note for comments.
	* src/plugins/Ancestors.py: Use get_note for comments.
	* src/plugins/FtmStyleAncestors.py: Use get_note for comments.
	* src/plugins/FtmStyleDescendants.py: Use get_note for comments.
	* src/plugins/NavWebPage.py: Use get_note for comments.
	* src/plugins/ScratchPad.py: Use get_note for comments.
	* src/plugins/WebPage.py: Use get_note for comments.

2005-03-26  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib.py (Source.replace_source_references): Add method.
	* src/MergeData.py (MergeSources.merge): Use new handle replacement.

2005-03-26  Don Allingham  <don@gramps-project.org>
	* src/MergeData.py: Add interface support for parents/family merging

2005-03-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/Check.py: Add check for child handle in family, that
	does no longer exist in database
