@@ -1,4 +1,8 @@
 2005-03-29  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
+	* src/plugins/ScratchPad.py (on_object_select_row): fixed the drop of 
+	text into TextView widgets.
+	
+2005-03-29  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
 	* src/DdTargets.py: add family targets to target list functions
 	* src/Marriage.py (at_dest_drag_data_received, ev_dest_drag_data_received, 
 	ev_source_drag_data_get, at_source_drag_data_get): fixed dnd methods and 
